--- a/Sun_Nan/ContosoUniversity/ContosoUniversity/Views/Courses/Delete.cshtml
+++ b/Sun_Nan/ContosoUniversity/ContosoUniversity/Views/Courses/Delete.cshtml
@@ -1,38 +1,30 @@
-﻿@model ContosoUniversity.Models.Student
+﻿@model ContosoUniversity.Models.Course
 
 @{
     ViewBag.Title = "Delete";
 }
 
 <h2>Delete</h2>
-<p class="error">@ViewBag.ErrorMessage</p>
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Student</h4>
+    <h4>Course</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LastName)
+            @Html.DisplayFor(model => model.Title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FirstMidName)
+            @Html.DisplayNameFor(model => model.Credits)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FirstMidName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EnrollmentDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EnrollmentDate)
+            @Html.DisplayFor(model => model.Credits)
         </dd>
 
     </dl>
