--- a/Sun_Nan/ContosoUniversity/ContosoUniversity/Views/Enrollments/Delete.cshtml
+++ b/Sun_Nan/ContosoUniversity/ContosoUniversity/Views/Enrollments/Delete.cshtml
@@ -1,39 +1,38 @@
-﻿@model ContosoUniversity.Models.Student
+﻿@model ContosoUniversity.Models.Enrollment
 
 @{
     ViewBag.Title = "Delete";
 }
 
 <h2>Delete</h2>
-<p class="error">@ViewBag.ErrorMessage</p>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Student</h4>
+    <h4>Enrollment</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.LastName)
+            @Html.DisplayNameFor(model => model.Course.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LastName)
+            @Html.DisplayFor(model => model.Course.Title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.FirstMidName)
+            @Html.DisplayNameFor(model => model.Student.LastName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FirstMidName)
+            @Html.DisplayFor(model => model.Student.LastName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.EnrollmentDate)
+            @Html.DisplayNameFor(model => model.Grade)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EnrollmentDate)
+            @Html.DisplayFor(model => model.Grade)
         </dd>
 
     </dl>
