--- a/Sun_Nan/ContosoUniversity/ContosoUniversity/Views/Students/Details.cshtml
+++ b/Sun_Nan/ContosoUniversity/ContosoUniversity/Views/Students/Details.cshtml
@@ -34,7 +34,7 @@
             @Html.DisplayFor(model => model.EnrollmentDate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Enrollment)
+            @Html.DisplayNameFor(model => model.Enrollments)
         </dt>
         <dd>
             <table class="table">
@@ -42,17 +42,17 @@
                     <th>Course Title</th>
                     <th>Grade</th>
                 </tr>
-                @foreach (var item in Model.Enrollment)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Course.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Grade)
-                    </td>
-                </tr>
-        }
+                @foreach (var item in Model.Enrollments)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Course.Title)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Grade)
+                        </td>
+                    </tr>
+                }
             </table>
         </dd>
     </dl>
